# image_matching

./: functionhead.h  meshgrid.txt  projection_transformation  匹配算法C实现定义.txt
Simplified_WSSF/: Create_Image_space.m  FeatureDetection.m  Readme.txt  Simplified_WSSF_demo.m  calculate_oritation_zhixin.m
Simplified_WSSF/EPSIF/: demo.m
Simplified_WSSF/EPSIF/utilities/: ep2d_full.mexw64  ep2d_guided.mexw64  ep2d_simple.mexw64  ep2d_simple_15.mexw64  ep2d_simple_31.mexw64  ep2d_simple_9.mexw64
Simplified_WSSF/Others/: phasecong3.m
WSSF_main/: CMakeLists.txt  readme
WSSF_main/include/: Create_Image_space.hpp  Fcommon.hpp  GLOH_description.hpp  WSSF_features.hpp  ep2d_simple_9.hpp  logger.hpp  phasecong3.hpp
WSSF_main/src/: Create_Image_space.cpp  Fcommon.cpp  GLOH_description.cpp  WSSF_features.cpp  logger.cpp  main.cpp
phasecong3/: CMakeLists.txt  readme.txt
phasecong3/include/: phasecong3.hpp
phasecong3/src/: phasecong3.cpp
projection_transformation/: demo_malan_projection.m  demo_projection.py
